[package]
name = "scratch"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
bson = { version = "2.0", features = ["chrono-0_4"] }
mongodb = "3.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["catch-panic"] }
futures = "0.3"
jsonwebtoken = "9"
bcrypt = "0.15"
axum-extra = { version = "0.9", features = ["cookie"] }
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
time = { version = "0.3", features = ["macros"] }
